--- a/themes/clara/layouts/partials/component-indexer.html
+++ b/themes/clara/layouts/partials/component-indexer.html
@@ -12,7 +12,7 @@
 
         <div class="clr-col-8 padding-left-72 padding-top-24">
 
-          <ul class="list-unstyled">
+          <ul class="list-unstyled twocol">
 
               {{ range where .Site.Pages "Params.type" "component" }}
 
